--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,24 @@
-# Node modules
-/node_modules/
-
 # Logs
 logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Diretórios de build
-/dist/
-/build/
-/public/css/
-/public/js/
+node_modules
+dist
+dist-ssr
+*.local
 
-# Ambiente
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Sistema operacional
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-Thumbs.db
-
-# Arquivos temporários
-*.swp
-*.swo
-*.bak
-
-# Sass (geralmente arquivos compilados de CSS)
-*.css.map
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
