--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
   "name": "demeter-web",
-  "version": "1.0.0",
-  "description": "Site para monitoramento e gerenciamento de energia",
-  "main": "index.js",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LuccasArruda/demeter-web.git"
-  },
-  "author": "Deméter Team",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/LuccasArruda/demeter-web/issues"
-  },
-  "homepage": "https://github.com/LuccasArruda/demeter-web#readme",
   "dependencies": {
-    "axios": "^1.8.4",
-    "express": "^5.1.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "sass": "^1.86.3"
+    "@eslint/js": "^9.22.0",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.22.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
+    "vite": "^6.3.1"
   }
 }
