--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,21 @@
+# ========================
+# Node.js dependencies
+# ========================
+node_modules/
+
+# ========================
+# Build output
+# ========================
+dist/
+dist-ssr/
+build/
+.vite/
+.cache/
+
+# ========================
 # Logs
-logs
+# ========================
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,18 +23,32 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# ========================
+# OS-specific files
+# ========================
 .DS_Store
+Thumbs.db
+
+# ========================
+# IDEs and Editors
+# ========================
+.vscode/
+!.vscode/extensions.json
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# ========================
+# Environment variables
+# ========================
+.env
+.env.local
+.env.*.local
+
+# ========================
+# Local configuration files
+# ========================
+*.local
